--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # Ignore Gradle build output directory
 build
+
+~$stCaseOutlineBBTriangledocx.docx
+TestCaseOutlineBBTriangledocx.docx
+PathForBash.txt
